--- a/analyses/index.Rmd
+++ b/analyses/index.Rmd
@@ -1,29 +1,16 @@
 ---
 title: "Data Analyses Instructions"
 author: "Prepared by Joey Hulbert, Washington State University"
-date: July, 2022 (in progress)
+date: June, 2022 (in progress)
 output: html_document
 ---
 
-* Links
-  + [Home](https://jmhulbert.github.io/redcedar)
-  + [Data Wrangling](./data-wrangle/Data-Wrangle-v1.html)
-  + [Data Analyses](./analyses/)
-  + [Data Visualization](./data-visualization/)
 
+|            |            |            |            |
+|:----------:|:----------:|:----------:|:----------:|
+|[Home](https://jmhulbert.github.io/redcedar)|[Data Wrangling](./data-wrangle/)|[Data Analyses](./analyses/)|[Data Visualization](./data-visualization/)|
+|             |           |            |            |
 
-
-
-## Data Wrangling
-
-* Methods
-  + [Overview](./data-wrangle/Data-Wrangle-v1.html)
-    + iNat Data
-    + Environmental Data
-      + [Climate Data](./data-wrangle/climate/Climate-Data-Extraction.html)
-      + [Topography Data](./data-wrangle/topo/Topo-Data-Extraction---ArcGIS.html)
-      + [Soils Data](./data-wrangle/soils/Soil-Data-Extraction.html)
-    + Combined Data  
 
 ## Analyses 
 
@@ -39,12 +26,3 @@ output: html_document
       + [Soils Data](./analyses/soils/Soils-Data-Analysis.html)
     + [**Combined Analyses**](./analyses/Full-Environmental-Predictor-Analyses.html)
 
-## Data Visualization
-
-* Methods
-  + [Overview](./data-visualization/)
-    + [iNat Data](./data-visualization/inat/iNat-Data-Visualization.html)
-    + Environmental Data
-      + [Climate Data](./data-visualization/climate/Climate-Data-Visualization.html)
-      + [Topography Data](./data-visualization/topo/Topo-Data-Visualization.html)
-      + [Soils Data](./data-visualization/soils/Soils-Data-Visualization.html)
