--- a/index.Rmd
+++ b/index.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "Western Redcedar Dieback Map - Data Analyses"
 author: "Prepared by Joey Hulbert, Washington State University"
-date: July, 2022 (in progress)
+date: June, 2022 (in progress)
 output: html_document
 ---
 |            |            |            |            |
 |:----------:|:----------:|:----------:|:----------:|
-|[Home](https://jmhulbert.github.io/redcedar)|[Data Wrangling](./data-wrangle/Data-Wrangle-v1.html)|[Data Analyses](./analyses/)|[Data Visualization](./data-visualization/)|
+|[Home](https://jmhulbert.github.io/redcedar)|[Data Wrangling](./data-wrangle/)|[Data Analyses](./analyses/)|[Data Visualization](./data-visualization/)|
 |             |           |            |            |
 
 # Welcome
