--- a/data-visualization/index.Rmd
+++ b/data-visualization/index.Rmd
@@ -7,7 +7,7 @@ output: html_document
 
 |            |            |            |            |
 |:----------:|:----------:|:----------:|:----------:|
-|[Home](https://jmhulbert.github.io/redcedar)|[Data Wrangling](./data-wrangle/)|[Data Analyses](./analyses/)|[Data Visualization](./data-visualization/)|
+|[Home](https://jmhulbert.github.io/redcedar)|[Data Wrangling](https://jmhulbert.github.io/redcedar/data-wrangle/)|[Data Analyses](https://jmhulbert.github.io/redcedar/analyses/)|[Data Visualization](https://jmhulbert.github.io/redcedar/data-visualization/)|
 |             |           |            |            |
 
 
